apps/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: prowlarr
          image: 11notes/prowlarr:2.5.2@sha256:591910ce8b5a5c77ede500a969f0ac1db4e399b0c6bc2c801f80f2a3a3bf9e14
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 9696
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 15
            periodSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /prowlarr/etc
            - name: tmp
              mountPath: /tmp
          resources:
            limits:
              memory: 512Mi
              cpu: "0.5"
            requests:
              memory: 128Mi
              cpu: "0.1"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: servarr-servarr-prowlarr
        - name: tmp
          emptyDir:
            medium: Memory
