apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: http
      protocol: TCP
