apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-oidc@kubernetescrd
spec:
  ingressClassName: traefik-system-traefik
  rules:
    - host: prowlarr.kennyandries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
